@@ -3,6 +3,7 @@
 
 #include <algorithm> // sort
 #include <cstddef> // size_t
+#include <dbarts/cstdint.hpp> // uint_least32_t
 #include <cmath>   // sqrt, floor
 
 #include <misc/alloca.h>
@@ -35,7 +36,7 @@ namespace {
     double k;
     double power;
     double base;
-    uint8_t status;
+    std::uint8_t status;
   };
   
   void updateFitForCell(BARTFit& fit, Control& repControl, Model& repModel, const CellParameters& parameters,
@@ -71,6 +72,28 @@ namespace {
     
     double* results;
   };
+  
+  ext_rng* createSingleThreadedRNG(
+    ext_rng_algorithm_t rng_algorithm,
+    ext_rng_standardNormal_t rng_standardNormal,
+    std::uint_least32_t rng_seed,
+    const char*& errorMessage);
+  
+  ext_rng* createMultiThreadedRNG(
+    ext_rng_algorithm_t rng_algorithm,
+    ext_rng_standardNormal_t rng_standardNormal,
+    ext_rng* seedGenerator,
+    const char*& errorMessage);
+  
+  ext_rng* createSeedRNG(
+    ext_rng_algorithm_t rng_algorithm,
+    std::uint_least32_t rng_seed,
+    const char*& errorMessage);
+  
+  bool ensureRNGSeedsAreUnique(
+    const ext_rng* rng_1,
+    ext_rng* rng_2,
+    ext_rng* seedGenerator);
 }
 
 extern "C" { static void crossvalidationTask(void* data); }
@@ -81,7 +104,7 @@ namespace dbarts { namespace xval {
                        Method method, sizetOrDouble testSampleSize, size_t numReps,
                        size_t numInitialBurnIn, size_t numContextShiftBurnIn, size_t numRepBurnIn,
                        const LossFunctorDefinition& lossFunctorDef, size_t numThreads,
-                       const std::size_t* nTrees, size_t numNTrees, const double* k, size_t numKs,
+                       const size_t* nTrees, size_t numNTrees, const double* k, size_t numKs,
                        const double* power, size_t numPowers, const double* base, size_t numBases,
                        double* results)
 
@@ -138,33 +161,33 @@ namespace dbarts { namespace xval {
                               lossFunctorDef, numReps, cellParameters };
     ext_rng_algorithm_t rng_algorithm = static_cast<ext_rng_algorithm_t>(threadControl.rng_algorithm);
     ext_rng_standardNormal_t rng_standardNormal = static_cast<ext_rng_standardNormal_t>(threadControl.rng_standardNormal);
-    
+    std::uint_least32_t rng_seed = threadControl.rng_seed;
     threadControl.rng_algorithm = RNG_ALGORITHM_USER_POINTER;
     
     if (numThreads <= 1) {
-      ext_rng* rng;
+      const char* errorMessage;
+      ext_rng* rng = createSingleThreadedRNG(
+        rng_algorithm, rng_standardNormal, rng_seed, errorMessage);
       
-      // both BART sampler and xval algorithm can use native sampler
-      if (rng_algorithm == EXT_RNG_ALGORITHM_INVALID &&
-          rng_standardNormal == EXT_RNG_STANDARD_NORMAL_INVALID) {
-        
-        if ((rng = ext_rng_createDefault(true)) == NULL)
-          ext_throwError("could not allocate rng");
-      } else {
-        if (ext_rng_createAndSeed(&rng, rng_algorithm, rng_standardNormal) != 0)
-          ext_throwError("could not allocate rng");
+      if (rng == NULL) {
+        delete [] cellParameters;
+        ext_throwError(errorMessage);
       }
-      
+
       ThreadData threadData = { &sharedData, rng, 0, numRepCells, 0, results };
       
       crossvalidationTask(&threadData);
       
       ext_rng_destroy(rng);
     } else {
-      if (rng_algorithm == EXT_RNG_ALGORITHM_INVALID)
-        rng_algorithm = ext_rng_getDefaultAlgorithmType();
-      if (rng_standardNormal == EXT_RNG_STANDARD_NORMAL_INVALID)
-        rng_standardNormal = ext_rng_getDefaultStandardNormalType();
+      ext_rng* seedGenerator = NULL;
+      const char* errorMessage;
+      if (rng_seed != DBARTS_CONTROL_INVALID_SEED &&
+          (seedGenerator = createSeedRNG(rng_algorithm, rng_seed, errorMessage)) == NULL)
+      {
+        delete [] cellParameters;
+        ext_throwError(errorMessage);
+      }
       
       misc_btm_manager_t threadManager;
       misc_btm_create(&threadManager, numThreads);
@@ -174,14 +197,30 @@ namespace dbarts { namespace xval {
       size_t offByOneIndex;
       
       misc_btm_getNumThreadsForJob(threadManager, numRepCells, 0, NULL, &numRepCellsPerThread, &offByOneIndex);
-      
+
       
       ThreadData* threadData = misc_stackAllocate(numThreads, ThreadData);
       void** threadDataPtrs  = misc_stackAllocate(numThreads, void*);
       for (size_t i = 0; i < offByOneIndex; ++i) {
         threadData[i].shared = &sharedData;
-        if (ext_rng_createAndSeed(&threadData[i].rng, rng_algorithm, rng_standardNormal) != 0)
-          ext_throwError("could not allocate rng");
+        threadData[i].rng = createMultiThreadedRNG(
+          rng_algorithm,
+          rng_standardNormal,
+          seedGenerator,
+          errorMessage);
+        if (threadData[i].rng == NULL) {
+          for (size_t j = i; j > 0; --j) ext_rng_destroy(threadData[j - 1].rng);
+          if (seedGenerator != NULL) ext_rng_destroy(seedGenerator);
+          delete [] cellParameters;
+          ext_throwError(errorMessage);
+        }
+        if (i > 0 && !ensureRNGSeedsAreUnique(threadData[i - 1].rng, threadData[i].rng, seedGenerator)) {
+          ext_rng_destroy(threadData[i].rng);
+          for (size_t j = i; j > 0; --j) ext_rng_destroy(threadData[j - 1].rng);
+          if (seedGenerator != NULL) ext_rng_destroy(seedGenerator);
+          delete [] cellParameters;
+          ext_throwError("unable to ensure seed uniqueness");
+        }
         threadData[i].repCellOffset = i * numRepCellsPerThread;
         threadData[i].numRepCells   = numRepCellsPerThread;
         threadData[i].threadId = i;
@@ -191,14 +230,32 @@ namespace dbarts { namespace xval {
       
       for (size_t i = offByOneIndex; i < numThreads; ++i) {
         threadData[i].shared = &sharedData;
-        if (ext_rng_createAndSeed(&threadData[i].rng, rng_algorithm, rng_standardNormal) != 0)
-          ext_throwError("could not allocate rng");
+        threadData[i].rng = createMultiThreadedRNG(
+          rng_algorithm,
+          rng_standardNormal,
+          seedGenerator,
+          errorMessage);
+        if (threadData[i].rng == NULL) {
+          for (size_t j = i; j > 0; --j) ext_rng_destroy(threadData[j - 1].rng);
+          if (seedGenerator != NULL) ext_rng_destroy(seedGenerator);
+          delete [] cellParameters;
+          ext_throwError(errorMessage);
+        }
+        if (i > 0 && !ensureRNGSeedsAreUnique(threadData[i - 1].rng, threadData[i].rng, seedGenerator)) {
+          ext_rng_destroy(threadData[i].rng);
+          for (size_t j = i; j > 0; --j) ext_rng_destroy(threadData[j - 1].rng);
+          if (seedGenerator != NULL) ext_rng_destroy(seedGenerator);
+          delete [] cellParameters;
+          ext_throwError("unable to ensure seed uniqueness");
+        }
         threadData[i].repCellOffset = offByOneIndex * numRepCellsPerThread + (i - offByOneIndex) * (numRepCellsPerThread - 1);
         threadData[i].numRepCells   = numRepCellsPerThread - 1;
         threadData[i].threadId = i;
         threadData[i].results = results + threadData[i].repCellOffset * lossFunctorDef.numResults;
         threadDataPtrs[i] = threadData + i;
       }
+      
+      if (seedGenerator != NULL) ext_rng_destroy(seedGenerator);
       
       misc_btm_runTasks(threadManager, crossvalidationTask, threadDataPtrs, numThreads);
       
@@ -847,3 +904,178 @@ namespace {
   }
 }
 
+namespace {
+  ext_rng* createSingleThreadedRNG(
+    ext_rng_algorithm_t rng_algorithm,
+    ext_rng_standardNormal_t rng_standardNormal,
+    std::uint_least32_t rng_seed,
+    const char*& errorMessage)
+  {
+    ext_rng* rng = NULL;
+    if (rng_algorithm == EXT_RNG_ALGORITHM_INVALID &&
+        rng_standardNormal == EXT_RNG_STANDARD_NORMAL_INVALID)
+    {
+      if ((rng = ext_rng_createDefault(true)) == NULL) {
+        // Use built-in
+        errorMessage = "could not allocate rng";
+        return NULL;
+      }
+      if (rng_seed != DBARTS_CONTROL_INVALID_SEED && ext_rng_setSeed(rng, rng_seed) != 0) {
+        // Set seed if specified
+        errorMessage = "could not seed rng";
+        ext_rng_destroy(rng);
+        return NULL;
+      }
+    } else {
+      // Use custom
+      if (rng_algorithm == EXT_RNG_ALGORITHM_INVALID)
+        rng_algorithm = ext_rng_getDefaultAlgorithmType();
+      if (rng_standardNormal == EXT_RNG_STANDARD_NORMAL_INVALID)
+        rng_standardNormal = ext_rng_getDefaultStandardNormalType();
+      
+      if (rng_algorithm == EXT_RNG_ALGORITHM_USER_UNIFORM) {
+        errorMessage = "cannot create rng with user-specified uniform distribution function";
+        return NULL;
+      }
+
+      if (rng_standardNormal == EXT_RNG_STANDARD_NORMAL_USER_NORM) {
+        errorMessage = "cannot create rng with user-specified normal distribution function";
+        return NULL;
+      }
+
+      if (rng_seed == DBARTS_CONTROL_INVALID_SEED) {
+        // No need to seed
+        if (ext_rng_createAndSeed(&rng, rng_algorithm, rng_standardNormal) != 0) {
+          errorMessage = "could not allocate rng";
+          return NULL;
+        }
+      } else {
+        // Create first, then set seed
+        if ((rng = ext_rng_create(rng_algorithm, NULL)) == NULL) {
+          errorMessage = "could not allocate rng";
+          return NULL;
+        }
+
+        if (ext_rng_setStandardNormalAlgorithm(rng, rng_standardNormal, NULL) != 0) {
+          errorMessage = "could not set rng standard normal";
+          ext_rng_destroy(rng);
+          return NULL;
+        }
+
+        if (ext_rng_setSeed(rng, rng_seed) != 0) {
+          errorMessage = "could not seed rng";
+          ext_rng_destroy(rng);
+          return NULL;
+        }
+      }
+    }
+    
+    return rng;
+  }
+
+  ext_rng* createMultiThreadedRNG(
+    ext_rng_algorithm_t rng_algorithm,
+    ext_rng_standardNormal_t rng_standardNormal,
+    ext_rng* seedGenerator,
+    const char*& errorMessage)
+  {
+    ext_rng* rng = NULL;
+    if (rng_algorithm == EXT_RNG_ALGORITHM_INVALID &&
+        rng_standardNormal == EXT_RNG_STANDARD_NORMAL_INVALID) {
+      if ((rng = ext_rng_createDefault(false)) == NULL) {
+        errorMessage = "could not allocate rng";
+        return NULL;
+      }
+    } else {
+      if (rng_algorithm == EXT_RNG_ALGORITHM_INVALID)
+        rng_algorithm = ext_rng_getDefaultAlgorithmType();
+      if (rng_standardNormal == EXT_RNG_STANDARD_NORMAL_INVALID)
+        rng_standardNormal = ext_rng_getDefaultStandardNormalType();
+      
+      if (rng_algorithm == EXT_RNG_ALGORITHM_USER_UNIFORM) {
+        errorMessage = "cannot create rng with user-specified uniform distribution function";
+        return NULL;
+      }
+
+      if (rng_standardNormal == EXT_RNG_STANDARD_NORMAL_USER_NORM) {
+        errorMessage = "cannot create rng with user-specified normal distribution function";
+        return NULL;
+      }
+      
+      if ((rng = ext_rng_create(rng_algorithm, NULL)) == NULL) {
+        errorMessage = "could not allocate rng";
+        return NULL;
+      }
+
+      if (ext_rng_setStandardNormalAlgorithm(rng, rng_standardNormal, NULL) != 0) {
+        errorMessage = "could not set rng standard normal";
+        ext_rng_destroy(rng);
+        return NULL;
+      }
+    }
+    
+    if (seedGenerator != NULL) {
+      std::uint_least32_t seed = static_cast<std::uint_least32_t>(ext_rng_simulateUnsignedIntegerUniformInRange(seedGenerator, 0, static_cast<std::uint_least32_t>(-1)));
+      if (ext_rng_setSeed(rng, seed) != 0) {
+        errorMessage = "could not seed rng";
+        ext_rng_destroy(rng);
+        return NULL;
+      }
+    } else {
+      if (ext_rng_setSeedFromClock(rng) != 0) {
+        errorMessage = "could not seed rng";
+        ext_rng_destroy(rng);
+        return NULL;
+      }
+    }
+
+    return rng;
+  }
+  
+  ext_rng* createSeedRNG(
+    ext_rng_algorithm_t rng_algorithm,
+    std::uint_least32_t rng_seed,
+    const char*& errorMessage)
+  {
+    ext_rng* rng = NULL;
+    if (rng_algorithm == EXT_RNG_ALGORITHM_INVALID) {
+      rng = ext_rng_createDefault(false);
+    } else {
+      if (rng_algorithm == EXT_RNG_ALGORITHM_USER_UNIFORM) {
+        errorMessage = "cannot create rng with user-specified uniform distribution function";
+        return NULL;
+      }
+      
+      rng = ext_rng_create(rng_algorithm, NULL);
+    }
+    if (rng == NULL) {
+      errorMessage = "could not allocate rng";
+      return NULL;
+    }
+    if (ext_rng_setSeed(rng, rng_seed) != 0) {
+      errorMessage = "could not seed rng";
+      ext_rng_destroy(rng);
+      return NULL;
+    }
+    return rng;
+  }
+
+  bool ensureRNGSeedsAreUnique(const ext_rng* rng_1, ext_rng* rng_2, ext_rng* seedGenerator)
+  {
+    size_t numSeedResets;
+    for (numSeedResets = 0; numSeedResets < static_cast<size_t>(-1); ++numSeedResets) {
+      if (!ext_rng_seedsAreEqual(rng_1, rng_2)) return true;
+      if (seedGenerator != NULL) {
+        if (ext_rng_setSeed(rng_2, static_cast<std::uint_least32_t>(ext_rng_simulateUnsignedIntegerUniformInRange(seedGenerator, 0, static_cast<std::uint_least32_t>(-1)))) != 0)
+          return false;
+      } else {
+        if (ext_rng_setSeedFromClock(rng_2) != 0)
+          return false;
+      }
+    }
+    
+    if (!ext_rng_seedsAreEqual(rng_1, rng_2)) return true;
+
+    return false;
+  }
+}
